[package]
name = "bluetrum_updater"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bytes = "1.1.0"
futures = "0.3.17"
rfd = "0.5.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serialport = "4.0.1"
# tokio = { version = "1", features = ["full"] }
# tokio-serial = "5.4.1"
# tokio-util = { version = "0.6.8", features = ["full"] }
